Add Bearer authorization
